# estimated_read_time

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  read_options.rs  read_time.rs
tests/: read_time_test.rs
