[package]
name = "estimated_read_time"
version = "1.0.0"
authors = ["karthik.k <karthik51295@gmail.com>"]
edition = "2018"
description = "Calculates the time taken to read a text."
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/estimated_read_time/1.0.0/estimated_read_time/"
repository = "https://github.com/karthik512/estimated_read_time"
homepage = "https://crates.io/crates/estimated_read_time"
keywords = ["read_time", "reading_time", "estimated_time", "estimate_read_time", "medium_time"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
